[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# I only get backtraces when opt-level is set to 0
#opt-level = 0
debug = true

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
